core: Update logic for core Wintermute library for ZeroMQ.
  * core: Add assignment operator to Util::Serializable.
  * core: Prevent generated headers from being committing.
  * core: Move more logic into private definitions.
  * core: Made use of Emitter in the Tunnel.
  * core: Remove concept of queued up Message stack.
  * core: Add start/stop state to Receiver.
  * core: Add start/stop state to Dispatcher.
  * core: Allow for base handling of Messages for Receiver.
  * core: Remove private global header for Wintermute.
  * core: Clean up whitespace in Module.
  * core: Move to 'class' from 'struct'.
  * core: Add checks into Plugin & Library.
  * core: Write error out to log on plugin fail.
  * core: Made distinction between states for Library.
  * core: Update global header for Wintermute.
  * core: Made functions more clear.
  * core: Add handle for checking libuv calls.
  * core: Improve event system for Wintermute.
  * core: Move event names to be global constants.
  * core: Tie in more logging for the poller.
  * core: Allow deserialization of Message using operator=.
  * core: Allow dispatchers & receivers to be removed.
  * core: Remove duplicate function call in Tunnel.

--- a/src/wintermutecore/globals.hpp.in
+++ b/src/wintermutecore/globals.hpp.in
@@ -89,6 +89,7 @@ using std::dynamic_pointer_cast;
   }
 
 
+
 /// Defines inline instance-level methods to handle public instance data.
 #define W_DEF_PUBLIC(Class) \
   using _Pub = Class; \
@@ -122,10 +123,10 @@ using std::dynamic_pointer_cast;
 /// Provides a shortcut to grab private data for an static object with private data.
 #define W_SPRV(Class) \
   assert(Class::instance()); \
-  SharedPtr<Class##Private> const d = Class::instance()->d_func();
+  Class##Private* const d = Class::instance()->d_func();
 #define W_SPRVP(_Class, Class) \
   assert(Class::instance()); \
-  SharedPtr<_Class> const d = Class::instance()->d_func();
+  _Class* const d = Class::instance()->d_func();
 
 /// Provides a shortcut to grab public data for an object with public data.
 #define W_PUB(Class) Class* const q = q_func();
