[test] Correct test suite.
  * Update wintermute_add_target_properties to use target functions.
  * Use source-relative paths in test includes.

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@ build/*
 CTestConfig.cmake
 *.orig
 CTestConfig.cmake
-src/wintermutecore/globals.hpp
-*/*/test_suite.hpp
+src/**/globals.hpp
+test/**/test_suite.hpp
 .vagrant/*
