cmake: Improve CMake modules and system for ZeroMQ.
  * cmake: Change target name from 'wintermutecore' to 'wintermute'.
  * cmake: Enable zeromq as a plugin for build.
  * cmake: Update dependencies for transport-zeromq.
  * cmake: Add 'FindZeroMQCXX.cmake'.
  * cmake: Update CMakeLists file for transport-zeromq.
  * cmake: Update plugin test signature.
  * cmake: Update test for ZMQ in Tunnel.
  * cmake: Cosmetic changes to CMake for ZMQ.
  * cmake: Disable exception handling in tests.
  * cmake: Update CMake modules for Wintermute.
  * cmake: Update language specification to C++14.
  * cmake: Add GDB-specific helper flag (-ggdb3)
  * cmake: Dropped abi-version=4 forcing

--- a/src/wintermute-transport-zeromq/test/CMakeLists.txt
+++ b/src/wintermute-transport-zeromq/test/CMakeLists.txt
@@ -17,15 +17,11 @@
 # Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 # Boston, MA 02111-1307, USA.
 ###############################################################################
-# == Root library.
-ADD_SUBDIRECTORY(wintermutecore)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
 
-# == Standalone Plugins
-#ADD_SUBDIRECTORY(wintermute-daemon)
-#ADD_SUBDIRECTORY(wintermute-heartbeat)
-
-# == Transports
-#ADD_SUBDIRECTORY(wintermute-transport-dbus)
-ADD_SUBDIRECTORY(wintermute-transport-zeromq)
-#ADD_SUBDIRECTORY(wintermute-transport-http)
-#ADD_SUBDIRECTORY(wintermute-transport-gcm)
+WINTERMUTE_PLUGIN_ADD_TEST(
+  PREFIX unit-zmq
+  TARGET transport-zmq
+  NAME tunnel
+  HEADER ${CMAKE_CURRENT_SOURCE_DIR}/tunnel.hh
+  )
