[loop] Update logic for polling, timer, events.
  * loop: Add Event::Timer to Wintermute.
  * loop: Add declaration for Timer & TimerEvent.
  * loop: Add little info about not closing loop here.
  * loop: Add more assertions into Poller.
  * loop: Add sources for Event::Timer.
  * loop: Add test for EventPoller.
  * loop: Capture return value when starting loop.
  * loop: Fix up Poller, improve Event tests.
  * loop: Implement Poller for events.
  * loop: Update docs and make Poller sharable.
  * loop: Update header for Poller, clean test.
  * loop: Used a global function to handle uv.
  * test: (event_poller) Drop useless trace msg.
  * test: Add test for Event::Timer.

--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -45,3 +45,5 @@ add_a_unit_test(version)
 add_a_unit_test(event_loop)
 add_a_unit_test(event_emitter)
 add_a_unit_test(event_listener)
+add_a_unit_test(event_poller)
+add_a_unit_test(event_timer)
