[loop] Implement logic for Events namespace.
  * loop: Add base for sources inclusion.
  * loop: Add basis of Event::Loop.
  * loop: Add header for Events namespace.
  * loop: Add logic for Emitter class.
  * loop: Add logic for Events::Listener.
  * loop: Add sources for Event::Loop.
  * loop: Add sources for Event::Emitter.
  * loop: Add sources for Event::Event.
  * loop: Add sources for Event::Listener.
  * loop: Add sources for Events::Emittable.
  * loop: Add sources for Events::Event.
  * loop: Expose the Loop used by Emitter.
  * loop: Flesh out logic for Event object.
  * loop: Require name for Event objects.
  * loop: Update definition of Events::Listener.
  * loop: Update definition of Events::Loop.
  * loop: Update logic for Event::Loop.
  * test: Add test for Event::Loop.
  * test: Add test for Events::Listener.

--- a/src/wintermutecore/CMakeLists.txt
+++ b/src/wintermutecore/CMakeLists.txt
@@ -60,6 +60,11 @@ set(_srcs
   ./module_pool.cpp
   ./module_call.cpp
 
+  # == Event related
+  ./event_loop.cpp
+  ./event_emitter.cpp
+  ./event_object.cpp
+  ./event_listener.cpp
   )
 
 # Set up sources.
