--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -42,3 +42,6 @@ add_a_unit_test(method)
 add_a_unit_test(plugin)
 add_a_unit_test(library)
 add_a_unit_test(version)
+add_a_unit_test(event_loop)
+add_a_unit_test(event_emitter)
+add_a_unit_test(event_listener)
