--- a/.editorconfig
+++ b/.editorconfig
@@ -4,7 +4,7 @@ root = true
 end_of_line = LF
 charset = utf-8
 
-[*.{cpp,hpp,hh,hpp}]
+[*.{cpp,hpp,hh,hpp,cmake}]
 indent_style = space
 indent_size = 2
 insert_final_newline = false
@@ -14,3 +14,10 @@ max_line_length = 80
 [.travis.yml]
 indent_style = space
 indent_size = 2
+
+[**/*/CMakeLists.txt]
+indent_style = space
+indent_size = 2
+insert_final_newline = false
+trim_trailing_whitespace = true
+max_line_length = 80
