cfg: Flesh out logic for configuration class.
  core: Realign generated values in global hdr.
  core: Add private utility header.
  cfg: Implement logic to look up + set values.
  cfg: Add 'addDirectory' function.
  cfg: Add generic jargon to sources.
  cfg: Add sources for configuration helper.
  cfg: Implement configuration lookup logic.
  cfg: Add support for looking up nested settings.
  cfg: Add private logic to handle Configuration.
  cfg: Abstract out how the lookups for configuration files are done.
  cfg: Use alternative method to tokenize key string.
  cfg: Move config logic to private space; can use different types.
  cfg: Add declaration for new get/set methods.

--- a/src/wintermutecore/globals.hpp.in
+++ b/src/wintermutecore/globals.hpp.in
@@ -35,10 +35,11 @@
 using std::string;
 using std::make_shared;
 
-#define WINTERMUTE_VERSION          "@WINTERMUTE_VERSION@"
-#define WINTERMUTE_LOGGER_ROOT_NAME "root"
-#define WINTERMUTE_ENV_PLUGIN_PATH  "WINTERMUTE_PLUGIN_PATH"
-#define WINTERMUTE_ENV_LOG_LEVEL    "WINTERMUTE_LOG_LEVEL"
+#define WINTERMUTE_VERSION              "@WINTERMUTE_VERSION@"
+#define WINTERMUTE_CONFIG_INCLUDE_DIR   "@WINTERMUTE_CONFIG_INCLUDE_DIR@"
+#define WINTERMUTE_LOGGER_ROOT_NAME     "wntr"
+#define WINTERMUTE_ENV_PLUGIN_PATH      "WINTERMUTE_PLUGIN_PATH"
+#define WINTERMUTE_ENV_LOG_LEVEL        "WINTERMUTE_LOG_LEVEL"
 
 #ifdef WINTERMUTE_EXPORT
 # define WINTERMUTE_EXPORT_PUBLIC  __attribute__ ((visibility ("default")))
