--- a/test/unit/CMakeLists.txt
+++ b/test/unit/CMakeLists.txt
@@ -23,7 +23,11 @@ macro(add_a_unit_test _name)
     ${CMAKE_SOURCE_DIR}/test/unit/${_name}.hh)
 endmacro(add_a_unit_test)
 
+configure_file(sample.cfg.in sample.cfg @ONLY)
+
 # == Define the root tests.
+add_a_unit_test(util_serializable)
+add_a_unit_test(util_configuration)
 add_a_unit_test(singleton)
 add_a_unit_test(message)
 add_a_unit_test(module)
@@ -37,7 +41,6 @@ add_a_unit_test(call)
 add_a_unit_test(tunnel)
 add_a_unit_test(tunnel_dispatcher)
 add_a_unit_test(tunnel_receiver)
-add_a_unit_test(util)
 add_a_unit_test(method)
 add_a_unit_test(plugin)
 add_a_unit_test(library)
