[travis] cfg: Add notification hook.

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,10 @@ compiler:
 
 before_install:
   - test/bootstrap --before
-
 before_script:
   - test/bootstrap --generate
-
 script:
   - test/bootstrap --run
-
 after_success:
   - test/bootstrap --post
 
@@ -22,3 +19,5 @@ notifications:
     on_success: change
     on_failure: always
     on_start: false
+  slack:
+    secure: cjpZPOmM9uJNyOTd09fTcT7cMoghjOc4Qiu3hThU8XhkAJ5rkUZWaXKGpiSoCM1+7t9MM3DtnFa91KNOSPPjb+OoJNrr54+RNbLUT16OIYxzynbPSQxYWJ4osqrpoLImerSjW3JQsgKsj+eWTp442OkizJsxFkAsBmPIOAh1NsA=
