[wip] [daemon] Add logic to load plugins.

--- a/src/wintermute-daemon/globals.hpp.in
+++ b/src/wintermute-daemon/globals.hpp.in
@@ -22,5 +22,6 @@
 # define WINTERMUTE_DAEMON_GLOBALS_HPP_
 
 #define WINTERMUTE_DAEMON_PLUGIN_NAME "DAEMON"
+#define WINTERMUTE_DAEMON_CFG_PATH    "foooo.cfg"
 
 #endif
