--- a/src/wintermutecore/globals.hpp.in
+++ b/src/wintermutecore/globals.hpp.in
@@ -40,6 +40,7 @@ using std::to_string;
 #define WINTERMUTE_VERSION              "@WINTERMUTE_VERSION@"
 #define WINTERMUTE_CONFIG_INCLUDE_DIR   "@WINTERMUTE_CONFIG_INCLUDE_DIR@"
 #define WINTERMUTE_LOGGER_ROOT_NAME     "wntr"
+#define WINTERMUTE_DOMAIN               "in.wintermute"
 #define WINTERMUTE_ENV_PLUGIN_PATH      "WINTERMUTE_PLUGIN_PATH"
 #define WINTERMUTE_ENV_LOG_LEVEL        "WINTERMUTE_LOG_LEVEL"
 
