[daemon] cmake: Add private impl of Module to build.

--- a/src/wintermute-daemon/CMakeLists.txt
+++ b/src/wintermute-daemon/CMakeLists.txt
@@ -27,7 +27,9 @@ SET(WINTERMUTE_DAEMON_VERSION     0.0.1-dev)
 
 SET(_srcs
   plugin.cpp
-  daemon.cpp
+  plugin.cc
+  module.cpp
+  module.cc
   )
 
 CONFIGURE_FILE(globals.hpp.in
