[test] Update test suite.
  * unit_plugin: Ensure clean slate.
  * module_designation: Remove untested code.
  * fixture: Add plugin helpers + logging.
    * Add 'wntrtest_load_plugin' function.
    * Add 'wntrtest_unload_plugin' function.
    * Add more logging to system.
  * wintermute_sample: Enable WINTER_SAMPLE.
  * test_suite: Add header inclusion guard.
  * module_pool: Update test.
    * Add case for looking up modules.
    * Ensure that modules are perserved in pool.

--- a/test/include/test_suite.hpp.in
+++ b/test/include/test_suite.hpp.in
@@ -24,7 +24,10 @@
 #define SAMPLE_PLUGIN_PATH      "@CMAKE_BINARY_DIR@/lib/libwintermutesample.so"
 #define SAMPLE_TEST_FILE        "@CMAKE_SOURCE_DIR@/CMakeLists.txt"
 
+#ifndef WINTER_SAMPLE
 #include "fixtures.hpp"
+#endif
+
 #include <cstdlib>
 
 #endif
