[heartbeat] cmake: Update dependencies and sources.
  * Add 'libuuid' as a dependency.
  * Add message sources.

--- a/src/wintermute-heartbeat/CMakeLists.txt
+++ b/src/wintermute-heartbeat/CMakeLists.txt
@@ -23,6 +23,8 @@ PROJECT(WintermuteHeartbeat CXX)
 INCLUDE(WintermutePlugin)
 INCLUDE(FindPkgConfig)
 
+PKG_SEARCH_MODULE(UUID uuid)
+
 SET(WINTERMUTE_HEARTBEAT_VERSION 0.0.1-dev)
 
 SET(_srcs
@@ -30,6 +32,8 @@ SET(_srcs
   plugin.cc
   module.cpp
   module.cc
+  pong_message.cpp
+  ping_message.cpp
   )
 
 CONFIGURE_FILE(globals.hpp.in
@@ -45,6 +49,16 @@ WINTERMUTE_PLUGIN_DECLARE(
   NAME   heartbeat
   TARGET wintermute-heartbeat
   )
+
+TARGET_LINK_LIBRARIES(
+  wintermute-heartbeat
+  ${UUID_LIBRARIES}
+  )
+
+TARGET_INCLUDE_DIRECTORIES(
+  wintermute-heartbeat BEFORE PUBLIC
+  ${UUID_INCLUDE_DIRS}
+)
 
 WINTERMUTE_PLUGIN_VALIDATE(TARGET wintermute-heartbeat)
 
