--- a/src/wintermutecore/globals.hpp.in
+++ b/src/wintermutecore/globals.hpp.in
@@ -38,7 +38,20 @@ using std::make_shared;
 using std::to_string;
 using std::dynamic_pointer_cast;
 
-#define WINTERMUTE_VERSION              "@WINTERMUTE_VERSION@"
+// {{{ Versioning Information
+#define WINTERMUTE_VERSION         "@WINTERMUTE_VERSION@"
+#define WINTERMUTE_VERSION_MAJOR   "@WINTERMUTE_VERSION_MAJOR@"
+#define WINTERMUTE_VERSION_MINOR   "@WINTERMUTE_VERSION_MINOR@"
+#define WINTERMUTE_VERSION_PATCH   "@WINTERMUTE_VERSION_PATCH@"
+#define WINTERMUTE_VERSION_RC      "@WINTERMUTE_VERSION_RC@"
+
+#define WINTERMUTE_BUILD_HOST \
+  "@CMAKE_HOST_SYSTEM_NAME@ @CMAKE_HOST_SYSTEM_PROCESSOR@ @CMAKE_HOST_SYSTEM_VERSION@"
+
+#define WINTERMUTE_BUILD_TARGET \
+  "@CMAKE_SYSTEM_NAME@ @CMAKE_SYSTEM_PROCESSOR@ @CMAKE_SYSTEM_VERSION@"
+// }}}
+
 #define WINTERMUTE_CONFIG_INCLUDE_DIR   "@WINTERMUTE_CONFIG_INCLUDE_DIR@"
 #define WINTERMUTE_LOGGER_ROOT_NAME     "wntr"
 #define WINTERMUTE_DOMAIN               "in.wintermute"
