[core] cmake: Move from wintermutecore to wintermute-core.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -18,7 +18,7 @@
 # Boston, MA 02111-1307, USA.
 ###############################################################################
 # == Root library.
-ADD_SUBDIRECTORY(wintermutecore)
+ADD_SUBDIRECTORY(wintermute-core)
 
 # == Standalone Plugins
 ADD_SUBDIRECTORY(wintermute-daemon)
