[daemon] src: Update inclusion towards 'wintermute-core'.

--- a/src/wintermute-daemon/globals.hpp.in
+++ b/src/wintermute-daemon/globals.hpp.in
@@ -21,7 +21,7 @@
 #ifndef WINTERMUTE_DAEMON_GLOBALS_HPP_
 # define WINTERMUTE_DAEMON_GLOBALS_HPP_
 
-#include <wintermutecore/globals.hpp>
+#include <wintermute-core/globals.hpp>
 
 #define WINTERMUTE_DAEMON_PLUGIN_NAME "DAEMON"
 #define WINTERMUTE_DAEMON_DOMAIN WINTERMUTE_DOMAIN
