--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -21,11 +21,18 @@
 # == Set variables to make Wintermute building a bit more sane.
 set(BUILD_SHARED_LIBRARIES ON)
 set(CMAKE_COLOR_MAKEFILE ON)
-set(CMAKE_VERBOSE_MAKEFILE OFF)
+set(CMAKE_VERBOSE_MAKEFILE ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
 
 # == Allow this project to use the modules we've provided.
-list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/Modules")
+set(CMAKE_MODULE_PATH
+  ${CMAKE_MODULE_PATH}/
+  ${CMAKE_SOURCE_DIR}/cmake/Modules/
+  ${CMAKE_SOURCE_DIR}/cmake/Modules/Internal/
+  CACHE INTERNAL "Include paths."
+  )
+
+INCLUDE(WintermuteSourceBuild)
