[cmake] Share values, add dependencies to tests.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -19,13 +19,13 @@
 ###############################################################################
 
 # == Set variables to make Wintermute building a bit more sane.
-set(BUILD_SHARED_LIBRARIES ON)
-set(CMAKE_COLOR_MAKEFILE ON)
-set(CMAKE_VERBOSE_MAKEFILE ON)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
+set(BUILD_SHARED_LIBRARIES ON PARENT_SCOPE)
+set(CMAKE_COLOR_MAKEFILE ON PARENT_SCOPE)
+set(CMAKE_VERBOSE_MAKEFILE ON PARENT_SCOPE)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON PARENT_SCOPE)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin PARENT_SCOPE)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
 
 # == Allow this project to use the modules we've provided.
 set(CMAKE_MODULE_PATH
