[cmake] Make the build process less verbose.

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -21,7 +21,7 @@
 # == Set variables to make Wintermute building a bit more sane.
 set(BUILD_SHARED_LIBRARIES ON PARENT_SCOPE)
 set(CMAKE_COLOR_MAKEFILE ON PARENT_SCOPE)
-set(CMAKE_VERBOSE_MAKEFILE ON PARENT_SCOPE)
+set(CMAKE_VERBOSE_MAKEFILE OFF PARENT_SCOPE)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON PARENT_SCOPE)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin PARENT_SCOPE)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
