--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -18,18 +18,21 @@
 # Boston, MA 02111-1307, USA.
 ###############################################################################
 
+# == Import prerequistie modules.
+INCLUDE(GNUInstallDirs)
+
 # == Set variables to make Wintermute building a bit more sane.
-set(BUILD_SHARED_LIBRARIES ON PARENT_SCOPE)
-set(CMAKE_COLOR_MAKEFILE ON PARENT_SCOPE)
-set(CMAKE_VERBOSE_MAKEFILE OFF PARENT_SCOPE)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON PARENT_SCOPE)
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin PARENT_SCOPE)
-set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
-set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
+SET(BUILD_SHARED_LIBRARIES ON PARENT_SCOPE)
+SET(CMAKE_COLOR_MAKEFILE ON PARENT_SCOPE)
+SET(CMAKE_VERBOSE_MAKEFILE OFF PARENT_SCOPE)
+SET(CMAKE_EXPORT_COMPILE_COMMANDS ON PARENT_SCOPE)
+SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin PARENT_SCOPE)
+SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
+SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib PARENT_SCOPE)
 
 # == Allow this project to use the modules we've provided.
-set(CMAKE_MODULE_PATH
-  ${CMAKE_MODULE_PATH}/
+SET(CMAKE_MODULE_PATH
+  ${CMAKE_MODULE_PATH}
   ${CMAKE_SOURCE_DIR}/cmake/Modules/
   ${CMAKE_SOURCE_DIR}/cmake/Modules/Internal/
   ${CMAKE_SOURCE_DIR}/cmake/Templates/
@@ -37,5 +40,16 @@ set(CMAKE_MODULE_PATH
   CACHE INTERNAL "Include paths."
   )
 
+# == Generate 'UseWintermute.cmake'
+CONFIGURE_FILE(
+  ${CMAKE_CURRENT_SOURCE_DIR}/Templates/Internal/UseWintermute.cmake.in
+  ${CMAKE_CURRENT_SOURCE_DIR}/Modules/Internal/UseWintermute.cmake
+  @ONLY)
+
 INCLUDE(WintermuteSourceBuild)
 INCLUDE(CMakeProvideUninstallTarget)
+
+# == Install modules
+#INSTALL(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/Modules
+  #DESTINATION ${WINTERMUTE_CMAKE_DIR}/Modules
+#)
